# rag-pipeline

./: .env.example  .gitignore  Makefile  docker-compose.yml  test-widget.html
backend/: Cargo.toml  Dockerfile  railway.toml
backend/config/: default.toml  production.toml
backend/src/: config.rs  errors.rs  lib.rs  main.rs  openapi.rs  state.rs
backend/src/db/: connection.rs  migrations.rs  mod.rs
backend/src/db/models/: admin_config.rs  audit_log.rs  conversation.rs  crawl_job.rs  document.rs  document_chunk.rs  embed_key.rs  invite.rs  mod.rs  settings.rs  user.rs  widget_session.rs
backend/src/dto/: auth.rs  document.rs  mod.rs
backend/src/middleware/: auth.rs  embed_auth.rs  mod.rs
backend/src/routes/: admin.rs  admin_audit.rs  admin_config.rs  admin_embed.rs  admin_logs.rs  auth.rs  chat.rs  crawl.rs  documents.rs  health.rs  mod.rs  settings.rs  widget.rs
backend/src/services/: audit.rs  auth_service.rs  crawler.rs  email.rs  llm_provider.rs  mod.rs  pdf.rs  storage.rs  text_extract.rs  vector.rs
backend/static/: widget.js
frontend/: Dockerfile  package-lock.json  package.json  railway.toml  svelte.config.js
frontend/src/: app.css
frontend/src/lib/: markdown.ts
frontend/src/lib/api/: client.ts
frontend/src/lib/stores/: auth.ts
frontend/src/lib/types/: index.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/(protected)/: +layout.svelte
frontend/src/routes/(protected)/admin/: +page.svelte
frontend/src/routes/(protected)/chat/: +page.svelte
frontend/src/routes/(protected)/crawl/: +page.svelte
frontend/src/routes/(protected)/documents/: +page.svelte
frontend/src/routes/(protected)/settings/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/setup/: +page.svelte
