[package]
name = "rag-backend"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
# Web framework
axum = { version = "0.8.6", features = ["macros", "multipart"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["timeout"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# LLM & RAG
rig-core = "0.23.1"
rig-qdrant = "0.1.17"

# Database
rusqlite = { version = "0.37.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"

# MinIO / S3 client
aws-sdk-s3 = "1.124.0"
aws-config = "1.8.13"
aws-credential-types = "1.2.8"

# Auth
jsonwebtoken = "10.3.0"
argon2 = "0.5.3"

# Config
config = "0.15.19"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.11"

# Web scraping
reqwest = { version = "0.13.2", features = ["json"] }
scraper = "0.25.0"

# PDF processing
pdf-extract = "0.10.0"

# Utilities
anyhow = "1.0.100"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
url = "2.5.4"

# Async streams for SSE
tokio-stream = "0.1.18"
futures = "0.3.31"

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1
strip = true
