[package]
name = "rag-backend"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
# Web framework
axum = { version = "0.8.6", features = ["macros", "multipart"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["timeout"] }
tower-http = { version = "0.6.6", features = ["cors", "trace", "fs"] }

# LLM & RAG
rig-core = "0.23.1"
rig-qdrant = "0.1.17"
qdrant-client = "1.17.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }

# MinIO / S3 client
aws-sdk-s3 = "1.124.0"
aws-config = "1.8.13"
aws-credential-types = "1.2.8"

# Auth
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
argon2 = "0.5.3"

# Config
config = "0.15.19"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.11"

# Web scraping
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.25.0"

# Document processing
pdf-extract = "0.10.0"
docx-rs = "0.4"
calamine = "0.26"
quick-xml = "0.37"
csv = "1.3"

# Crypto
sha2 = "0.10"
rand = "0.9"

# Utilities
anyhow = "1.0.100"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
url = "2.5.4"

# Async streams for SSE
tokio-stream = "0.1.18"
futures = "0.3.31"

# OpenAPI docs (optional, dev-only)
utoipa = { version = "5.4", features = ["axum_extras"], optional = true }
utoipa-redoc = { version = "6.0", features = ["axum"], optional = true }

[features]
default = []
openapi = ["dep:utoipa", "dep:utoipa-redoc"]

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1
strip = true
